--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <meta property="og:type" content="book" />
   
   <meta property="og:description" content="Cours de mathématiques pour la 1ère année à l’ECG." />
-  
+  <meta name="github-repo" content="zetrac/Cours1e" />
 
   <meta name="twitter:card" content="summary" />
   <meta name="twitter:title" content="Cours de mathématiques 1e" />
@@ -23,7 +23,7 @@
 <meta name="author" content="Robinson Cartez" />
 
 
-<meta name="date" content="2022-08-19" />
+<meta name="date" content="2022-08-20" />
 
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="apple-mobile-web-app-capable" content="yes" />
@@ -536,7 +536,7 @@
 <div id="header">
 <h1 class="title">Cours de mathématiques 1e</h1>
 <p class="author"><em>Robinson Cartez</em></p>
-<p class="date"><em>2022-08-19</em></p>
+<p class="date"><em>2022-08-20</em></p>
 </div>
 <div id="bienvenus" class="section level1 unnumbered hasAnchor">
 <h1>Bienvenus<a href="index.html#bienvenus" class="anchor-section" aria-label="Anchor link to header"></a></h1>
@@ -592,7 +592,7 @@ gitbook.start({
 "link": null,
 "text": null
 },
-"download": ["_main.pdf", "_main.epub"],
+"download": ["_main.pdf"],
 "search": {
 "engine": "fuse",
 "options": null
