--- a/semaine-1-calcul-littéral-1.html
+++ b/semaine-1-calcul-littéral-1.html
@@ -12,7 +12,7 @@
   <meta property="og:type" content="book" />
   
   <meta property="og:description" content="Cours de mathématiques pour la 1ère année à l’ECG." />
-  
+  <meta name="github-repo" content="zetrac/Cours1e" />
 
   <meta name="twitter:card" content="summary" />
   <meta name="twitter:title" content="Chapitre 1 Semaine 1 : Calcul littéral (1) | Cours de mathématiques 1e" />
@@ -23,7 +23,7 @@
 <meta name="author" content="Robinson Cartez" />
 
 
-<meta name="date" content="2022-08-19" />
+<meta name="date" content="2022-08-20" />
 
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="apple-mobile-web-app-capable" content="yes" />
@@ -660,7 +660,8 @@ x^5\cdot x^2 \cdot x^4 \cdot x^1 &amp; = x^{5+2+4+1}= x^{12}\\
 <hr />
 <p><span class="math inline">\(\begin{array}{rrcl}  \boldsymbol{a^1}\longrightarrow &amp; &amp; &amp; {\color{green}a^2}\cdot a^1 = a^{2+1} = a^3\\  &amp;&amp;&amp;\\  \text{or:}&amp; a^3 &amp; = &amp; {\color{green}a^2}\cdot a\\  &amp;&amp;&amp;\\  \text{donc on définit:}&amp;{\color{red}a^1} &amp; {\color{red}=} &amp; {\color{red}a}\\  \end{array}\)</span></p>
 <hr />
-<p><span class="math inline">\(\begin{array}{rrcl}  \boldsymbol{a^{-n}}\longrightarrow &amp; &amp; &amp; {\color{green}a^n}\cdot a^{-n} = a^{n+(-n)} = a^0 = 1\\  &amp;&amp;&amp;\\  \text{or:}&amp; 1 &amp; = &amp; {\color{green}a^n}\cdot \dfrac{1}{a^{n}}\\  &amp;&amp;&amp;\\  \text{donc on définit:}&amp;{\color{red}a^{-n}} &amp; {\color{red}=} &amp; {\color{red}\dfrac{1}{a^n}}\quad\text{ avec } a\neq 0\\  \end{array}\)</span></p>
+<p><span class="math inline">\(\begin{array}{rrcl}  \boldsymbol{a^{-n}}\longrightarrow &amp; &amp; &amp; a^n \cdot a^{-n} = a^{n+(-n)} = a^0 = 1\\  &amp; &amp; &amp;\\  \text{ or: } &amp; 1 &amp; = &amp; a^n \cdot \dfrac{1}{a^n}\\  &amp; &amp; &amp;\\  \text{donc, avec $a\ne0$, on définit : }\quad &amp; a^{-n} &amp; = &amp; \dfrac{1}{a^n}\\  \end{array}\)</span></p>
+<hr />
 <p>De plus <span class="math inline">\(\boldsymbol{a^{-n}}\)</span> <strong>est l’inverse de</strong> <span class="math inline">\(\boldsymbol{a^{-n}}\)</span>. Et on impose que <span class="math inline">\(a\neq 0\)</span>, car <span class="math inline">\(0\)</span> n’a pas d’inverse.</p>
 </div>
 <div id="quotient-de-puissances-de-même-base" class="section level4 hasAnchor" number="1.2.3.3">
@@ -1096,7 +1097,7 @@ gitbook.start({
 "link": null,
 "text": null
 },
-"download": ["_main.pdf", "_main.epub"],
+"download": ["_main.pdf"],
 "search": {
 "engine": "fuse",
 "options": null
