--- a/semaine-5-équations-linéaires-2.html
+++ b/semaine-5-équations-linéaires-2.html
@@ -12,7 +12,7 @@
   <meta property="og:type" content="book" />
   
   <meta property="og:description" content="Cours de mathématiques pour la 1ère année à l’ECG." />
-  
+  <meta name="github-repo" content="zetrac/Cours1e" />
 
   <meta name="twitter:card" content="summary" />
   <meta name="twitter:title" content="Chapitre 5 Semaine 5 : Équations linéaires (2) | Cours de mathématiques 1e" />
@@ -23,7 +23,7 @@
 <meta name="author" content="Robinson Cartez" />
 
 
-<meta name="date" content="2022-08-19" />
+<meta name="date" content="2022-08-20" />
 
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="apple-mobile-web-app-capable" content="yes" />
@@ -606,7 +606,7 @@ gitbook.start({
 "link": null,
 "text": null
 },
-"download": ["_main.pdf", "_main.epub"],
+"download": ["_main.pdf"],
 "search": {
 "engine": "fuse",
 "options": null
