--- a/semaine-1-calcul-littéral-1.html
+++ b/semaine-1-calcul-littéral-1.html
@@ -546,6 +546,9 @@ l’échiquier, deux sur la deuxième, quatre sur la troisième, huit sur
 la quatrième, et ainsi de suite toujours en doublant le nombre de
 grains de riz, jusqu’à la 64ème case et que le tout soit additionné et
 lui fût remis.</p>
+<div class="cadre">
+<p><img src="images/echiquier.jpg" align="center" /></p>
+</div>
 <p>D’apparence modeste, la demande fut accordée. Malheureusement, toutes les réserves de la terre ne purent y satisfaire.</p>
 <p>En réalité, le roi aurait dû donner <span class="math inline">\(18446744073709551615\)</span> grains de riz. Ceci correspond à environ <span class="math inline">\(1500\)</span> ans de production mondiale actuelle.</p>
 <p>Il est possible de noter le nombre de grains de riz de la manière suivante:</p>
